--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@types/uuid": "9.0.8",
     "immer": "10.1.1",
+    "openspace-api-js": "0.1.6",
     "react": "18.3.1",
     "react-dnd": "16.0.1",
     "react-dnd-html5-backend": "16.0.1",
     "react-dom": "18.3.1",
+    "react-icons": "5.2.1",
     "react-rnd": "10.4.11",
     "uuid": "10.0.0",
     "zustand": "4.5.2"
