--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "1.1.0",
     "@types/uuid": "9.0.8",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.1.1",
     "immer": "10.1.1",
+    "lucide-react": "0.400.0",
     "openspace-api-js": "0.1.6",
     "react": "18.3.1",
     "react-dnd": "16.0.1",
@@ -18,6 +22,9 @@
     "react-dom": "18.3.1",
     "react-icons": "5.2.1",
     "react-rnd": "10.4.11",
+    "react-window": "1.8.10",
+    "tailwind-merge": "2.3.0",
+    "tailwindcss-animate": "1.0.7",
     "uuid": "10.0.0",
     "zustand": "4.5.2"
   },
@@ -26,6 +33,7 @@
     "@types/node": "20.12.13",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
+    "@types/react-window": "1.8.8",
     "@typescript-eslint/eslint-plugin": "6.13.1",
     "@typescript-eslint/parser": "6.13.1",
     "@vitejs/plugin-react-swc": "3.7.0",
