--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Created by https://www.toptal.com/developers/gitignore/api/react,node,yarn,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=react,node,yarn,visualstudiocode
 
+uploads/
 ### Node ###
 # Logs
 logs
