--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "immer": "10.1.1",
+    "lodash": "4.17.21",
     "lucide-react": "0.400.0",
+    "multer": "1.4.5-lts.1",
     "openspace-api-js": "0.1.6",
     "react": "18.3.1",
+    "react-beautiful-dnd": "13.1.1",
     "react-dnd": "16.0.1",
     "react-dnd-html5-backend": "16.0.1",
     "react-dom": "18.3.1",
     "react-icons": "5.2.1",
+    "react-quill-new": "3.2.0",
     "react-rnd": "10.4.11",
     "react-window": "1.8.10",
     "tailwind-merge": "2.3.0",
@@ -30,8 +34,10 @@
   },
   "devDependencies": {
     "@nabla/vite-plugin-eslint": "2.0.4",
+    "@types/lodash": "4.17.6",
     "@types/node": "20.12.13",
     "@types/react": "18.3.3",
+    "@types/react-beautiful-dnd": "13.1.8",
     "@types/react-dom": "18.3.0",
     "@types/react-window": "1.8.8",
     "@typescript-eslint/eslint-plugin": "6.13.1",
