--- a/package.json
+++ b/package.json
@@ -9,10 +9,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "1.1.1",
+    "@radix-ui/react-checkbox": "1.1.1",
+    "@radix-ui/react-dialog": "1.1.1",
+    "@radix-ui/react-label": "2.1.0",
+    "@radix-ui/react-popover": "1.1.1",
+    "@radix-ui/react-progress": "1.1.0",
+    "@radix-ui/react-radio-group": "1.2.0",
+    "@radix-ui/react-select": "2.1.1",
+    "@radix-ui/react-separator": "1.1.0",
     "@radix-ui/react-slot": "1.1.0",
+    "@radix-ui/react-switch": "1.1.0",
+    "@radix-ui/react-toggle": "1.1.0",
+    "@radix-ui/react-toggle-group": "1.1.0",
+    "@tanstack/react-virtual": "3.8.3",
     "@types/uuid": "9.0.8",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
+    "cmdk": "1.0.0",
     "immer": "10.1.1",
     "lodash": "4.17.21",
     "lucide-react": "0.400.0",
@@ -25,6 +39,7 @@
     "react-dom": "18.3.1",
     "react-icons": "5.2.1",
     "react-quill-new": "3.2.0",
+    "react-resizable-panels": "2.0.20",
     "react-rnd": "10.4.11",
     "react-window": "1.8.10",
     "tailwind-merge": "2.3.0",
