--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@radix-ui/react-popover": "1.1.1",
     "@radix-ui/react-progress": "1.1.0",
     "@radix-ui/react-radio-group": "1.2.0",
+    "@radix-ui/react-scroll-area": "1.1.0",
     "@radix-ui/react-select": "2.1.1",
     "@radix-ui/react-separator": "1.1.0",
     "@radix-ui/react-slot": "1.1.0",
     "@radix-ui/react-switch": "1.1.0",
     "@radix-ui/react-toggle": "1.1.0",
     "@radix-ui/react-toggle-group": "1.1.0",
+    "@radix-ui/react-tooltip": "1.1.2",
     "@tanstack/react-virtual": "3.8.3",
     "@types/uuid": "9.0.8",
     "class-variance-authority": "0.7.0",
@@ -49,6 +51,7 @@
   },
   "devDependencies": {
     "@nabla/vite-plugin-eslint": "2.0.4",
+    "@tailwindcss/typography": "0.5.13",
     "@types/lodash": "4.17.6",
     "@types/node": "20.12.13",
     "@types/react": "18.3.3",
