--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-toggle": "1.1.0",
     "@radix-ui/react-toggle-group": "1.1.0",
     "@radix-ui/react-tooltip": "1.1.2",
+    "@tailwindcss/container-queries": "0.1.1",
     "@tanstack/react-virtual": "3.8.3",
     "@types/uuid": "9.0.8",
     "class-variance-authority": "0.7.0",
