--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "16.6.0",
     "@radix-ui/react-alert-dialog": "1.1.1",
-    "@radix-ui/react-checkbox": "1.1.1",
     "@radix-ui/react-dialog": "1.1.1",
     "@radix-ui/react-dropdown-menu": "2.1.1",
     "@radix-ui/react-label": "2.1.0",
     "@radix-ui/react-popover": "1.1.1",
     "@radix-ui/react-progress": "1.1.0",
-    "@radix-ui/react-radio-group": "1.2.0",
     "@radix-ui/react-scroll-area": "1.1.0",
     "@radix-ui/react-select": "2.1.1",
     "@radix-ui/react-separator": "1.1.0",
+    "@radix-ui/react-slider": "1.2.0",
     "@radix-ui/react-slot": "1.1.0",
     "@radix-ui/react-switch": "1.1.0",
+    "@radix-ui/react-tabs": "1.1.0",
     "@radix-ui/react-toggle": "1.1.0",
     "@radix-ui/react-toggle-group": "1.1.0",
     "@radix-ui/react-tooltip": "1.1.2",
@@ -37,15 +38,10 @@
     "multer": "1.4.5-lts.1",
     "openspace-api-js": "0.1.6",
     "react": "18.3.1",
-    "react-beautiful-dnd": "13.1.1",
-    "react-dnd": "16.0.1",
-    "react-dnd-html5-backend": "16.0.1",
     "react-dom": "18.3.1",
-    "react-icons": "5.2.1",
-    "react-quill-new": "3.2.0",
+    "react-quill-new": "3.2.2",
     "react-resizable-panels": "2.0.20",
     "react-rnd": "10.4.11",
-    "react-window": "1.8.10",
     "tailwind-merge": "2.3.0",
     "tailwindcss-animate": "1.0.7",
     "uuid": "10.0.0",
@@ -55,11 +51,9 @@
     "@nabla/vite-plugin-eslint": "2.0.4",
     "@tailwindcss/typography": "0.5.13",
     "@types/lodash": "4.17.6",
-    "@types/node": "20.12.13",
+    "@types/node": "22.0.2",
     "@types/react": "18.3.3",
-    "@types/react-beautiful-dnd": "13.1.8",
     "@types/react-dom": "18.3.0",
-    "@types/react-window": "1.8.8",
     "@typescript-eslint/eslint-plugin": "6.13.1",
     "@typescript-eslint/parser": "6.13.1",
     "@vitejs/plugin-react-swc": "3.7.0",
@@ -75,7 +69,7 @@
     "prettier": "3.1.0",
     "prettier-plugin-tailwindcss": "0.4.1",
     "tailwindcss": "3.4.1",
-    "typescript": "5.2.2",
+    "typescript": "5.5.4",
     "vite": "5.2.12"
   }
 }
