--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hello-pangea/dnd": "16.6.0",
     "@radix-ui/react-alert-dialog": "1.1.1",
+    "@radix-ui/react-checkbox": "1.1.1",
     "@radix-ui/react-dialog": "1.1.1",
     "@radix-ui/react-dropdown-menu": "2.1.1",
     "@radix-ui/react-label": "2.1.0",
@@ -32,6 +33,7 @@
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "cmdk": "1.0.0",
+    "fuse.js": "7.0.0",
     "immer": "10.1.1",
     "lodash": "4.17.21",
     "lucide-react": "0.414.0",
