--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "cmdk": "1.0.0",
+    "fast-deep-equal": "3.1.3",
     "fuse.js": "7.0.0",
     "immer": "10.1.1",
+    "just-debounce-it": "3.2.0",
     "lodash": "4.17.21",
     "lucide-react": "0.414.0",
+    "microdiff": "1.4.0",
     "multer": "1.4.5-lts.1",
     "openspace-api-js": "0.1.6",
     "react": "18.3.1",
@@ -47,6 +50,7 @@
     "tailwind-merge": "2.3.0",
     "tailwindcss-animate": "1.0.7",
     "uuid": "10.0.0",
+    "zundo": "2.3.0",
     "zustand": "4.5.2"
   },
   "devDependencies": {
