--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@hello-pangea/dnd": "16.6.0",
+    "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.1",
     "@radix-ui/react-checkbox": "1.1.1",
     "@radix-ui/react-dialog": "1.1.1",
     "@radix-ui/react-dropdown-menu": "2.1.1",
     "@radix-ui/react-label": "2.1.0",
+    "@radix-ui/react-menubar": "1.1.4",
     "@radix-ui/react-popover": "1.1.1",
     "@radix-ui/react-progress": "1.1.0",
     "@radix-ui/react-scroll-area": "1.1.0",
