--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@tailwindcss/container-queries": "0.1.1",
     "@tanstack/react-virtual": "3.8.3",
     "@types/uuid": "9.0.8",
+    "@uiw/react-textarea-code-editor": "3.1.0",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "cmdk": "1.0.0",
@@ -45,6 +46,7 @@
     "multer": "1.4.5-lts.1",
     "openspace-api-js": "0.1.6",
     "react": "18.3.1",
+    "react-color-palette": "7.3.0",
     "react-dom": "18.3.1",
     "react-quill-new": "3.2.2",
     "react-resizable-panels": "2.0.20",
