--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=react,node,yarn,visualstudiocode
 
 uploads/
+projects/
 ### Node ###
 # Logs
 logs
