--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@tanstack/react-virtual": "3.8.3",
     "@types/uuid": "9.0.8",
     "@uiw/react-textarea-code-editor": "3.1.0",
+    "archiver": "7.0.1",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "cmdk": "1.0.0",
