--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "prebuild": "npm install",
+    "prebuild": "rm -rf package-lock.json && rm -rf node_modules && npm install",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
