--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "prebuild": "rm -rf package-lock.json && rm -rf node_modules && npm install",
+    "prebuild": "npm install",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -61,7 +61,7 @@
     "zustand": "4.5.2"
   },
   "devDependencies": {
-    "@nabla/vite-plugin-eslint": "2.0.4",
+    "@nabla/vite-plugin-eslint": "2.0.5",
     "@tailwindcss/typography": "0.5.13",
     "@types/lodash": "4.17.6",
     "@types/node": "22.0.2",
@@ -69,7 +69,7 @@
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "6.13.1",
     "@typescript-eslint/parser": "6.13.1",
-    "@vitejs/plugin-react-swc": "3.7.0",
+    "@vitejs/plugin-react-swc": "3.9.0",
     "autoprefixer": "10.4.14",
     "eslint": "8.55.0",
     "eslint-config-prettier": "9.1.0",
@@ -83,6 +83,6 @@
     "prettier-plugin-tailwindcss": "0.4.1",
     "tailwindcss": "3.4.1",
     "typescript": "5.5.4",
-    "vite": "5.4.19"
+    "vite": "6.3.5"
   }
 }
